Fixed the border issue between the navbar and the footer.
Need to fix a misalignment issue wit hthe title in
the navbar.

--- a/style.css
+++ b/style.css
@@ -51,4 +51,7 @@ body {
     text-decoration: underline;
   }
 
-  
+.hoofdtitel {
+    color: white;
+    text-align: center;
+}
